# StateScope

./: .env.example  .gitignore  AACL_PER_MODEL_COMMANDS.md  DATA_LICENSES.md  README.md  README_AACL_DEMO.md  README_ADAPTERS.md  README_MODELS.md  README_TOOLS.md  index.html  main.tex  pyproject.toml  railway.json  render.yaml  requirements.txt
apps/: __init__.py
apps/statescope/: README.md  __init__.py  examples.py  model_routes.py  server.py
configs/experiments/: aacl_open_models.yaml  gonogo_mock.yaml  gonogo_open.yaml  gonogo_open_native_ablation.yaml  gonogo_open_textjson.yaml  gonogo_real.yaml  paper_min_open.yaml  paper_min_textjson.yaml  smoke.yaml
configs/models/: closed_anthropic.yaml  closed_google.yaml  closed_openai.yaml  closed_openai_gpt41.yaml  (+38 more)
docs/: aacl_human_study.md  mathnlp_benchmark_spec.md
driftmath/: __init__.py
scripts/: build_aacl_demobench.py  download_open_models.py  generate_data.py  make_aacl_report.py  make_report.py  run_aacl_batch.py  run_aacl_models_sequential.sh  run_eval.py  score_human_study.py  summarize.py  validate_mathnlp_benchmark.py
tests/: test_aacl.py  test_analysis.py  test_benchmark_v2.py  test_family_a.py  test_family_b.py  test_family_c.py  test_family_d.py  test_math_seed.py  test_mathqa_loader.py  test_model_configs.py  test_models.py  test_op_specs.py  test_operation_adapter.py  test_oracle_metrics.py  test_provenance.py  test_repair_escalation.py  test_runner_eval.py  test_schema.py  test_scripts.py  test_statescope_backend.py  test_statescope_intervene.py  test_statescope_server.py  test_systems_mock.py
(+67 files in other folders)
